Fix add_expense error

--- a/app/templates/add_expense.html
+++ b/app/templates/add_expense.html
@@ -1,12 +1,19 @@
-{% extends 'layout.html' %}
-{% block title %}Add Expense{% endblock %}
+{% extends 'base.html' %}
 {% block content %}
 <h2>Add New Expense</h2>
 <form method="POST">
-    {{ form.hidden_tag() }}
-    <div class="mb-3">{{ form.title.label }} {{ form.title(class="form-control") }}</div>
-    <div class="mb-3">{{ form.category.label }} {{ form.category(class="form-control") }}</div>
-    <div class="mb-3">{{ form.amount.label }} {{ form.amount(class="form-control") }}</div>
-    {{ form.submit(class="btn btn-success") }}
+    <div class="mb-3">
+        <label>Category</label>
+        <input type="text" name="category" class="form-control" required>
+    </div>
+    <div class="mb-3">
+        <label>Amount</label>
+        <input type="number" name="amount" class="form-control" step="0.01" required>
+    </div>
+    <div class="mb-3">
+        <label>Description</label>
+        <input type="text" name="description" class="form-control">
+    </div>
+    <button type="submit" class="btn btn-primary">Add Expense</button>
 </form>
 {% endblock %}
