--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,12 +1,15 @@
-{% extends 'layout.html' %}
-{% block title %}Login{% endblock %}
+{% extends 'base.html' %}
 {% block content %}
 <h2>Login</h2>
 <form method="POST">
-    {{ form.hidden_tag() }}
-    <div class="mb-3">{{ form.email.label }} {{ form.email(class="form-control") }}</div>
-    <div class="mb-3">{{ form.password.label }} {{ form.password(class="form-control") }}</div>
-    {{ form.submit(class="btn btn-primary") }}
+    <div class="mb-3">
+        <label>Email</label>
+        <input type="email" name="email" class="form-control" required>
+    </div>
+    <div class="mb-3">
+        <label>Password</label>
+        <input type="password" name="password" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
-<p class="mt-3">Don't have an account? <a href="{{ url_for('main.register') }}">Register here</a></p>
 {% endblock %}
