--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,24 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>All Expenses</h2>
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Category</th>
-            <th>Description</th>
-            <th>Amount ($)</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for exp in expenses %}
-        <tr>
-            <td>{{ exp.date.strftime('%Y-%m-%d') }}</td>
-            <td>{{ exp.category }}</td>
-            <td>{{ exp.description }}</td>
-            <td>{{ "%.2f"|format(exp.amount) }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-{% endblock %}
+<div class="card p-4 shadow-sm">
+    <h2>All Expenses</h2>
+    <table class="table table-hover table-striped">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Category</th>
+                <th>Description</th>
+                <th>Amount ($)</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for exp in expenses %}
+            <tr>
+                <td>{{ exp.date.strftime('%Y-%m-%d') }}</td>
+                <td>{{ exp.category }}</td>
+                <td>{{ exp.description }}</td>
+                <td>{{ "%.2f"|format(exp.amount) }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
