--- a/app/static/style.css
+++ b/app/static/style.css
@@ -41,3 +41,7 @@ form input, form button {
 .btn-primary:hover, .btn-outline-light:hover, .btn-light:hover {
     transform: scale(1.05);
 }
+
+.badge {
+    font-size: 90%;
+}
